--- a/view/package.json
+++ b/view/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "axios-hooks": "^2.1.0",
     "dayjs": "^1.8.23",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-showdown-771b8.cloudfunctions.net/api"
+  "proxy": "http://localhost:5000/showdown-771b8/us-central1/api"
 }
