all sorts of new stuff

--- a/view/package.json
+++ b/view/package.json
@@ -12,6 +12,7 @@
     "axios-hooks": "^2.1.0",
     "dayjs": "^1.8.23",
     "react": "^16.13.1",
+    "react-blob": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
