--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,17 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "busboy": "^0.3.1",
-    "firebase": "^7.21.0",
+    "firebase": "^7.23.0",
     "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "recipe-scraper": "^1.23.4"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.2.0"
   },
