--- a/view/package.json
+++ b/view/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.20.0",
     "axios-hooks": "^2.1.0",
     "dayjs": "^1.8.23",
+    "eslint": "^6.6.0",
     "react": "^16.13.1",
     "react-blob": "^2.1.0",
     "react-dom": "^16.13.1",
+    "react-image": "^4.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.2.0"
@@ -23,9 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
