--- a/view/package.json
+++ b/view/package.json
@@ -18,6 +18,7 @@
     "react-image": "^4.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0"
   },
   "scripts": {
