--- a/view/package.json
+++ b/view/package.json
@@ -12,6 +12,7 @@
     "axios-hooks": "^2.1.0",
     "dayjs": "^1.8.23",
     "eslint": "^6.6.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-blob": "^2.1.0",
     "react-dom": "^16.13.1",
