--- a/firebase.json
+++ b/firebase.json
@@ -3,5 +3,15 @@
     "predeploy": [
       // "npm --prefix \"$RESOURCE_DIR\" run lint"
     ]
+  },
+  "firestore": {},
+  "hosting" : {
+    "public": "./view/build",
+    "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "api"
+      }
+    ]
   }
 }
