--- a/view/package.json
+++ b/view/package.json
@@ -12,6 +12,8 @@
     "axios-hooks": "^2.1.0",
     "dayjs": "^1.8.23",
     "eslint": "^6.6.0",
+    "firebase": "^8.0.0",
+    "http-proxy-middleware": "^1.0.6",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-blob": "^2.1.0",
@@ -39,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://us-central1-showdown-771b8.cloudfunctions.net/api"
+  }
 }
