--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,37 @@
 {
   "functions": {
-    "predeploy": [
-      // "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "predeploy": [],
+    "source": "functions"
   },
   "firestore": {},
-  "hosting" : {
+  "hosting": {
     "public": "./view/build",
     "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      },
       {
         "source": "/api/**",
         "function": "api"
       }
     ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
