--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,9 @@
     "recipe-scraper": "^1.23.4"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
