--- a/firebase.json
+++ b/firebase.json
@@ -1,21 +1,32 @@
 {
-  "functions": {
-    "predeploy": [],
-    "source": "functions"
+  "database": {
+    "rules": "database.rules.json"
   },
-  "firestore": {},
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  },
   "hosting": {
-    "public": "./view/build",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
-      },
-      {
-        "source": "/api/**",
-        "function": "api"
       }
     ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   },
   "emulators": {
     "functions": {
